--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,13 @@
             "": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "": "tests"
+        }
+    },
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.0",
         "microsoft/application-insights": "^0.4.4"
     },
     "require-dev": {
