--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     },
     "require": {
         "php": "^7.1",
-        "microsoft/application-insights": "^0.4.5"
+        "microsoft/application-insights": "^0.4.5",
+        "psr/simple-cache": "^1.0",
+        "psr/log": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0 || ^8.0"
