--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "php": "^7.1",
         "microsoft/application-insights": "^0.4.5",
         "psr/simple-cache": "^1.0",
-        "psr/log": "^1.1"
+        "psr/log": "^1.1",
+        "guzzlehttp/ringphp": "1.0.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0 || ^8.0"
