--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
     "require": {
         "php": "^7.1",
         "microsoft/application-insights": "^0.4.5",
+        "guzzlehttp/guzzle": ">=5.3 <=6.3.3",
         "psr/simple-cache": "^1.0",
-        "psr/log": "^1.1",
-        "guzzlehttp/ringphp": "1.0.7"
+        "psr/log": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0 || ^8.0"
