--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": "^7.1",
         "microsoft/application-insights": "^0.4.5",
-        "guzzlehttp/guzzle": ">=5.3 <=6.3.3",
+        "guzzlehttp/guzzle": "^6.0",
         "psr/simple-cache": "^1.0",
         "psr/log": "^1.1"
     },
