--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         }
     },
     "require": {
-        "php": "^7.3 || ^8.0",
-        "microsoft/application-insights": "^0.4.5",
+        "php": "^7.3 || ~8.0 || ~8.1",
+        "app-insights-php/application-insights": "^0.4.6",
         "guzzlehttp/guzzle": "^6.0",
         "psr/simple-cache": "^1.0",
         "psr/log": "^1.1"
