--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
         }
     },
     "require": {
-        "php": "^7.3 || ~8.0 || ~8.1",
+        "php": "^7.4 || ~8.0 || ~8.1",
         "app-insights-php/application-insights": "^0.4.7",
-        "guzzlehttp/guzzle": "^6.0",
+        "guzzlehttp/guzzle": "^6.0 || ^7.0",
         "psr/simple-cache": "^1.0",
         "psr/log": "^1.1"
     },
