--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     },
     "require": {
         "php": "^7.4 || ~8.0 || ~8.1",
-        "app-insights-php/application-insights": "^0.4.7",
-        "guzzlehttp/guzzle": "^6.0 || ^7.0",
+        "app-insights-php/application-insights": "^0.4.8",
+        "guzzlehttp/guzzle": "^7.4",
         "psr/simple-cache": "^1.0",
         "psr/log": "^1.1"
     },
