--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
         }
     },
     "require": {
-        "php": "^7.4 || ~8.0 || ~8.1",
+        "php": "^7.4 || ^8.0",
         "app-insights-php/application-insights": "^0.4.8",
         "guzzlehttp/guzzle": "^7.4",
         "psr/simple-cache": "^1.0",
-        "psr/log": "^1.1"
+        "psr/log": "^1.1 || ^2.0 || ^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5 || ^9.0",
