--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "~8.1 || ~8.2",
         "app-insights-php/application-insights": "^0.4.8",
         "guzzlehttp/guzzle": "^7.4",
         "psr/simple-cache": "^1.0",
