--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
         "psr/log": "^1.1 || ^2.0 || ^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5 || ^9.0",
-        "friendsofphp/php-cs-fixer": "^3"
+        "phpunit/phpunit": "~10",
+        "friendsofphp/php-cs-fixer": "~3"
     },
     "scripts": {
         "phpunit": [
