--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,9 @@ jobs:
     strategy:
       matrix:
         dependencies:
+          - "lowest"
           - "locked"
+          - "highest"
         php-version:
           - "8.1"
           - "8.2"
